--- a/public/assets/css/sb-admin.css
+++ b/public/assets/css/sb-admin.css
@@ -11,7 +11,9 @@ For more info and more free Bootstrap 3 HTML themes, visit http://startbootstrap
 /* Global Styles */
 
 body {
-	margin-top:15px;
+	padding-top:15px;
+	padding-bottom:15px;
+	background:#f9f9f9 url(../images/dot.png) repeat;
   }
 
 #wrapper {
