--- a/public/assets/css/bootstrap.css
+++ b/public/assets/css/bootstrap.css
@@ -6058,3 +6058,16 @@ padding:1px;
 {
 	text-align:justify;
 }
+
+.teamback
+{
+	border:1px solid #777777;
+	-webkit-border-radius: 4px;
+-moz-border-radius: 4px;
+border-radius: 4px;
+background:#fff;
+width:48%;
+margin-bottom:15px;
+margin-left:1.3%;
+float:left;
+}
