--- a/public/assets/css/boo.css
+++ b/public/assets/css/boo.css
@@ -55,12 +55,12 @@ body {
 }
 
 a {
-  color: #0066cc;
+  color: #77a170;
   text-decoration: none;
 }
 
 a:hover {
-  color: #005580;
+  color: #77a170;
 }
 
 /* GRID 
