--- a/public/assets/css/bootstrap.css
+++ b/public/assets/css/bootstrap.css
@@ -5365,3 +5365,21 @@ float:left;
 {
 	margin-right:60px;
 }
+
+.memberimage
+{
+	width:100%;
+	height:50px;
+	-webkit-border-radius: 4px;
+-moz-border-radius: 4px;
+border-radius: 4px;
+padding:1px;
+   border:1px solid #021a40;
+   background-color:#e7e7e7;
+}
+
+.h6lineheight
+{
+	line-height:13px !important;
+}
+	
