--- a/public/assets/css/boo.css
+++ b/public/assets/css/boo.css
@@ -2184,6 +2184,11 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', en
   -moz-box-shadow: inset 0 1px 6px rgba(0, 0, 0, 0.1), inset 0 1px 1px rgba(0, 0, 0, 0.07), inset 1px 0 2px rgba(0, 0, 0, 0.05), 0 1px 0 rgba(255, 255, 255, 1);
   box-shadow: inset 0 1px 6px rgba(0, 0, 0, 0.4), inset 0 1px 1px rgba(0, 0, 0, 0.15), inset 1px 0 2px rgba(0, 0, 0, 0.05), 0 1px 0 rgba(255, 255, 255, 0.15);
 }
+.well-black img{
+  float: left;
+  margin-top: 15px;
+  margin-left: 12px;
+}
 
 .well-black h1,
 .well-black h2,
